fixed restaurant view layout issues + unhid the map's plus button

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,15 +214,25 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.restaurant-container {
+  display: flex;
+  flex: wrap;
+}
+
+.details-container {
+  width: 50%;
+}
+
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  height: 80px;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -236,7 +246,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 46%;
 }
 #restaurant-name {
   color: #f18200;
@@ -271,7 +281,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  width: 100%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
